--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 		<script src="https://cdn.jsdelivr.net/npm/topojson-client@3"></script>
 		<link rel="stylesheet" href="style.css" />
-		<script src="script.js"></script>
+		<script defer src="script.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -24,6 +24,7 @@
 				<div class="region-toggle" role="group" aria-label="Region">
 					<button id="region-us" class="active" type="button">US states</button>
 					<button id="region-eu" type="button">Europe countries</button>
+					<button id="region-sa" type="button">South America</button>
 					<button id="region-nl" type="button">Netherlands provinces</button>
 				</div>
 				<div class="quiz-toggle" role="group" aria-label="Question type">
