africa and central america

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 					<button id="region-us" class="active" type="button">US states</button>
 					<button id="region-eu" type="button">Europe countries</button>
 					<button id="region-sa" type="button">South America</button>
+				<button id="region-ca" type="button">Central America</button>
+				<button id="region-af" type="button">Africa</button>
 					<button id="region-nl" type="button">Netherlands provinces</button>
 				</div>
 				<div class="quiz-toggle" role="group" aria-label="Question type">
